force-app/main/default/objects/nFORCE__Business_Activity__c/nFORCE__Business_Activity__c.object-meta.xml
<CustomObject>
    <description>This object indicates the individual business activity that the system runs as part of a business process.</description>
    <label>Business Activity</label>
    <nameField>
        <label>Business Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>