force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Expected_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Expected_Child_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The user populates this optional number field with the number of expected child business activities (success or error) the business activity parent has. By default, it is zero.</description>
    <inlineHelpText>This number field indicates how many expected child business activities this business activity has.</inlineHelpText>
    <label>Expected Child Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>