force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this optional checkbox field to indicate if the system should schedule to run the business activity at a particular time. By default, it is false.</description>
    <inlineHelpText>This checkbox field indicates if the system should schedule the business activity to run at a particular time.</inlineHelpText>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>