force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__lookupKey__c</fullName>
    <description>This field contains an external identifier that is used to associate the record with the correlating record in an external system. The Lookup Key can also be used to identify related records when importing data into nCino without the need to know the internal ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the External ID for the Business Activity.</inlineHelpText>
    <label>Lookup Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>