force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Perform_Async__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Perform_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this optional checkbox field to indicate if the business activity should run asynchronously. By default, it is false.</description>
    <inlineHelpText>This optional checkbox field indicates if the business activity should run asynchronously.</inlineHelpText>
    <label>Perform Async</label>
    <type>Checkbox</type>
</CustomField>