force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Scheduled_Seconds_From_Now__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Scheduled_Seconds_From_Now__c</fullName>
    <description>The user populates this optional number field to indicate the amount of seconds from now when the scheduled business activity should run. By default, this field is blank.</description>
    <inlineHelpText>This number field indicates how many seconds from now the business activity should run.</inlineHelpText>
    <label>Scheduled Seconds From Now</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>