force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Sort_Order__c</fullName>
    <description>The user populates this optional number field to indicate what order within the business process this business activity should run. By default, it is blank.</description>
    <inlineHelpText>This number field indicates the order in which the business activity should run.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>