force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Status__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Status__c</fullName>
    <description>The user populates this required picklist field to indicate the status of the business activity. By default, it is Queued.</description>
    <inlineHelpText>This picklist field indicates the status of the business activity.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Completed With Errors</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>