force-app/main/default/objects/nFORCE__Business_Activity__c/validationRules/nFORCE__Enforce_Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>nFORCE__Enforce_Unique_Name</fullName>
    <active>true</active>
    <description>This validation rule enforces that the business activities field name is unique.</description>
    <errorConditionFormula>AND (
			IF($Setup.nFORCE__Business_Process_Settings__c.nFORCE__Disable_Validation_Rules__c,
				FALSE,
				((ISNEW() || ISCHANGED(Name))
				&amp;&amp; VLOOKUP( $ObjectType.nFORCE__Business_Activity__c.Fields.Name, $ObjectType.nFORCE__Business_Activity__c.Fields.Name , Name) = Name)
			)
		)</errorConditionFormula>
    <errorMessage>The business activity name must be unique. Check the name and try again.</errorMessage>
</ValidationRule>