force-app/main/default/objects/nFORCE__Business_Activity__c/listViews/nFORCE__All_Business_Activities.listView-meta.xml
<ListView>
    <fullName>nFORCE__All_Business_Activities</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Business_Process__c</columns>
    <columns>nFORCE__Sort_Order__c</columns>
    <columns>nFORCE__FQCN__c</columns>
    <columns>nFORCE__Is_Scheduled__c</columns>
    <columns>nFORCE__Perform_Async__c</columns>
    <columns>nFORCE__Wait_For_External_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Activities</label>
</ListView>